force-app/main/default/objects/HDT_QServicesTranscode__mdt/HDT_QServicesTranscode__mdt.object-meta.xml
<CustomObject>
    <label>Transcodifica Servizi Q01 Q02</label>
    <pluralLabel>Transcodifica Servizi Q01 Q02</pluralLabel>
</CustomObject>