force-app/main/default/objects/HDT_QServicesTranscode__mdt/fields/HerokuField__c.field-meta.xml
<CustomField>
    <fullName>HerokuField__c</fullName>
    <label>Campo Heroku</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>