force-app/main/default/objects/HDT_QServicesTranscode__mdt/fields/SfdcField__c.field-meta.xml
<CustomField>
    <fullName>SfdcField__c</fullName>
    <label>Campo SFDC</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>